--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express-handlebars": "^7.1.2",
     "express-session": "^1.18.0",
     "mysql2": "^3.9.4",
-    "sequelize": "^6.37.3"
+    "sequelize": "^6.37.3",
+    "jsonwebtoken": "^8.5.1"  
   }
 }
